--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,33 @@
 <% include ./partials/header %>
 
+    <div class="well well-lg">
+        <% jobs.forEach((job) => { %>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        <%= job.company %>
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <ul>
+                        <p>
+                            <strong>Position:</strong>
+                            <%= job.position %>
+                        </p>
+                        <p>
+                            <strong>Date of Application:</strong>
+                            <%= job.dateApplied %>
+                        </p>
+                        <p>
+                            <strong>Contact Person:</strong>
+                            <%= job.contact %>
+                        </p>
+                    </ul>
+                </div>
+            </div>
+            <% }) %>
 
-<h1>This is the home page!</h1>
+    </div>
 
 
-<% include ./partials/footer %>
+    <% include ./partials/footer %>
