--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,30 @@
 <!DOCUMENT html>
 <html>
-    <head>
-        <title>This is your job-tracker app</title>
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
+
+<head>
+    <title>This is your job-tracker app</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                <a class="navbar-brand" href="/">JTracker</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/jobs/new">New Job</a></li>
+                    <li><a href="/jobs">See Your Jobs</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
