--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,20 +9,27 @@
                     </h3>
                 </div>
                 <div class="panel-body">
-                    <ul>
-                        <p>
-                            <strong>Position:</strong>
-                            <%= job.position %>
-                        </p>
-                        <p>
-                            <strong>Date of Application:</strong>
-                            <%= job.dateApplied %>
-                        </p>
-                        <p>
-                            <strong>Contact Person:</strong>
-                            <%= job.contact %>
-                        </p>
-                    </ul>
+                    <div class="row">
+                        <div class="col-md-9">
+                            <ul>
+                                <p>
+                                    <strong>Position:</strong>
+                                    <%= job.position %>
+                                </p>
+                                <p>
+                                    <strong>Date of Application:</strong>
+                                    <%= job.dateApplied %>
+                                </p>
+                                <p>
+                                    <strong>Contact Person:</strong>
+                                    <%= job.contact %>
+                                </p>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <button id="view" class="btn btn-warning btn-md">View</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <% }) %>
