--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,23 +2,23 @@
 
     <div class="container">
         <div class="well well-lg">
-            <h1>Log a New Job Application</h1>
-            <form class="form-horizontal" action="/jobs" method="POST">
+            <h1>What would you like to edit?</h1>
+            <form class="form-horizontal" action="/jobs/<%= job._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <label for="company">Company Name</label>
-                    <input id="company" type="text" class="form-control" name="jobs[company]" placeholder="Company">
+                    <input id="company" type="text" class="form-control" name="jobs[company]" value="<%= job.company %>">
                 </div>
                 <div class="form-group">
                     <label for="position">Job Position</label>
-                    <input id="position" type="text" class="form-control" name="jobs[position]" placeholder="Position">
+                    <input id="position" type="text" class="form-control" name="jobs[position]" value="<%= job.position %>">
                 </div>
                 <div class="form-group">
                     <label for="date">Applied On</label>
-                    <input id="date" type="text" class="form-control" name="jobs[dateApplied]" placeholder="Date">
+                    <input id="date" type="text" class="form-control" name="jobs[dateApplied]" value="<%= job.dateApplied %>">
                 </div>
                 <div class="form-group">
                     <label for="contact">Contact Person</label>
-                    <input id="contact" type="text" class="form-control" name="jobs[contact]" placeholder="Contact Person">
+                    <input id="contact" type="text" class="form-control" name="jobs[contact]" value="<%= job.contact %>">
                 </div>
                 <button id="new-job" class="btn btn-lg btn-danger active">Submit</button>
             </form>
