--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <% include ./partials/header %>
+    <link rel="stylesheet" href="/css/home.css">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
