--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Hello!</h1>
+                <h1>Welcome!</h1>
 
                 <h3>Purpose</h3>
 
-                <p>This page will have an introductory message that will be explaining the app and it functionality.</p>
-                <p>This will be another paragraph that will further explain the purpose of the app</p>
+                <p class="main-p">This page will have an introductory message that will be explaining the app and it functionality.</p>
+                <p class="main-p">This will be another paragraph that will further explain the purpose of the app</p>
             </div>
         </div>
     </div>
